--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -35,7 +35,7 @@
                 <NavLink class="nav-link" href="ClaimListPage" style="margin-left: 15px">
                     <span class="oi oi-list" aria-hidden="true" style="align-self"></span> Claim list
                 </NavLink>
-                }
+                
             }
         </li>
         <li class="nav-item px-3">
@@ -74,7 +74,7 @@
 </div>
 
 
-<SfToast @ref="ToastObj"  Title="Access denide" Content="Not enough privilage ">
+<SfToast @ref="ToastObj"  Title="access denied" Content="Not enough privilege ">
     <ToastPosition X="Right"></ToastPosition>
 </SfToast>
 
@@ -187,4 +187,6 @@
     .error-container {
         color: red;
     }
+
+  
 </style>
