--- a/CCM_New/Client/Tool/Confirm.razor
+++ b/CCM_New/Client/Tool/Confirm.razor
@@ -7,7 +7,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                    
-                    <h5 class="modal-title" id="exampleModalLabel"> <span class="oi oi-question-mark" aria-hidden="true"></span><span>&nbsp&nbsp</span>@ConfirmationTitle</h5>
+                    <h5 class="modal-title" id="exampleModalLabel"> <span class="oi oi-task" aria-hidden="true"></span><span>&nbsp&nbsp</span>@ConfirmationTitle</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                                 @onclick="() => OnConfirmationChange(false)">
                             <span aria-hidden="true">&times;</span>
